--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,19 +27,19 @@ server:
   context-path: /sell
 
 wechat:
-  myAuthorizeAppId: wx22fc3eca01cead25
-  myAuthorizeAppSecret: e652f1e520ee23d41925e1b9ddc3843f
+  myAuthorizeAppId: ######
+  myAuthorizeAppSecret: ######
 
-  mpAppId: wxd898fcb01713c658
-  mpAppSecret: oTgZpwes1yqGU7r8MS1dbMYwQsuE
+  mpAppId: ######
+  mpAppSecret: ######
 
-  openAppId: wx6ad144e54af67d87
-  openAppSecret: 91a2ff6d38a2bbccfb7e9f9079108e2e
+  openAppId: ######
+  openAppSecret: ######
 
   mchId: 1483469312
   mchKey: 098F6BCD4621D373CADE4E832627B4F6
   #  退款证书
-  keyPath: /Users/chenkexun/Desktop/h5.p12
+  keyPath: ######
   notifyUrl: http://kevinsell.nat300.top/sell/pay/notify
 
   templateId:
